cp: 	PR c++/9447 	* decl.c (add_binding): Add bval local variable. 	(push_class_level_binding): Likewise. Allow a USING_DECL to be 	pushed. 	* decl2.c (do_class_using_decl):  The type of a using decl is 	unknown. 	* parser.c (cp_parser_postfix_expression): Refactor unqualified-id 	function call lookup code. 	* pt.c (tsubst): A USING_DECL will have unknown type. 	(tsubst_copy_and_build): Allow a using decl. 	(type_dependent_expression_p): A USING_DECL will make it 	dependent. 	* semantics.c (finish_member_declaration): Push a dependent using 	declaration. testsuite: 	PR c++/9447 	* g++.dg/template/using1.C: New test. 	* g++.dg/template/using2.C: New test. 	* g++.dg/template/using3.C: New test. 	* g++.dg/template/using4.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@69921 138bc75d-0d04-0410-961f-82ee72b054a4